Reaktivieren von superboxSelect

--- a/components/Forms/Speaker/Field/SuperBoxSelect.scss
+++ b/components/Forms/Speaker/Field/SuperBoxSelect.scss
@@ -1,4 +1,4 @@
-.kwcForm > div.kwcForm > form .formsSpeakerFieldSuperBoxSelect {
+div.kwcForm .formContainer form .formsSpeakerFieldSuperBoxSelect {
     .selectedValues {
         .selectedValue {
             margin-left: 2px;
