--- a/components/Map/Detail/Component.scss
+++ b/components/Map/Detail/Component.scss
@@ -2,3 +2,12 @@
     width: 200px;
     height: 70px;
 }
+
+#gmapLoader {
+    background-color: #005d92;
+    position: absolute;
+    padding: 5px;
+    color: white;
+    top: 50%;
+    left: 50%;
+}
