Styling neuer link

--- a/components/Directories/CircleGroups/Detail/Component.scss
+++ b/components/Directories/CircleGroups/Detail/Component.scss
@@ -20,4 +20,10 @@
         top: 5px;
         right: 15px;
     }
+
+    > .additionalLink {
+        display: block;
+        padding-left: 10px;
+        padding-bottom: 10px;
+    }
 }
