--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -2,6 +2,7 @@
 @import "form/default-styles";
 @import "config/colors";
 @import "kwf/css3/border-radius";
+@import "float-label";
 
 @include set-master-layout(default);
 
@@ -202,4 +203,47 @@ html .kwfUp-webForm input[type=checkbox] {
     line-height: 30px;
     background-color: #085AC0;
     background-image: none;
+}
+
+
+// float-label Styling. Copy because include scss from npm does not work with kwf
+.has-float-label {
+    @include float-label-container;
+
+    @include float-label;
+
+    select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+    }
+
+    textarea {
+        width: 100%;
+    }
+
+    input, select, textarea {
+        @include float-label-input;
+        font-size: inherit;
+        padding-top: 1em;
+        margin-bottom: 2px;
+        border: 0;
+        border-radius: 0;
+        border-bottom: 2px solid rgba(0,0,0,.1);
+
+        @include float-label-scaled {
+            top: 20px;
+        }
+
+        &:focus {
+            outline: none;
+            border-color: rgba(0,0,0,.5);
+        }
+    }
+
+    select {
+        padding-right: 1em;
+        background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23333' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .5em bottom .25em;
+        background-size: 8px 10px;
+    }
 }
