--- a/components/DataProtection/Component.scss
+++ b/components/DataProtection/Component.scss
@@ -7,15 +7,28 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 15;
 
     .popupWrapper {
-        width: 50%;
-        height: 200px;
+        width: 80%;
+        height: auto;
+        max-height: 60%;
         margin: auto;
-        top: 30%;
+        top: 20%;
         position: relative;
         overflow: auto;
         background-color: white;
         padding: 20px;
+
+        button.later {
+            background-color: white;
+            color: black;
+            padding: 6px;
+            padding-right: 10px;
+            padding-left: 10px;
+            border-style: solid;
+            cursor: pointer;
+            margin-left: 90px;
+        }
     }
 }
