--- a/components/DataProtection/Form/Component.scss
+++ b/components/DataProtection/Form/Component.scss
@@ -1,4 +1,23 @@
 @import "compass/css3/box-sizing";
 
 .cssClass {
+    &.kwcForm.default.veryNarrow > div.kwcForm > form .kwfField.form_data_privacy .kwfFormFieldWrapper > input[name="form_data_privacy"],
+    form .kwfField.form_data_privacy .kwfFormFieldWrapper input[name="form_data_privacy"] {
+        width: 15px !important;
+        margin-right: 5px;
+    }
+    form .kwfField.form_data_privacy .kwfFormFieldWrapper {
+        display: table;
+    }
+    form .kwfField.form_data_privacy .kwfFormFieldWrapper label {
+        width: auto !important;
+    }
+    form .submitWrapper.kwfButtonFlat {
+        position: absolute;
+        margin: 0;
+
+        .button {
+            margin-top: 0px;
+        }
+    }
 }
