--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -29,17 +29,15 @@ body {
 .kwfUp-webStandard ul { margin-bottom: 10px; margin-left: 20px; }
 .kwfUp-webStandard li { list-style-type: square; margin-bottom: 5px; line-height: 18px; color: $typo; }
 
-.kwfUp-webForm .submitWrapper .button {
-    margin-top: 5px;
-}
-
-.menues {
+.kwfUp-menues {
     box-shadow: 0px 2px 1px #f2f2f2;
     margin-bottom: 2px;
     z-index: 10;
     /* hack to bring menu to single layer to disable continous redraw */
     backface-visibility: hidden;
 }
+
+// Auskommentiert nach update auf 5.0
 .scrolled {
     .menues {
         -webkit-transition: box-shadow 0.5s; /* For Safari 3.1 to 6.0 */
@@ -48,163 +46,137 @@ body {
         position: fixed;
         top: 0px;
     }
-    #outerContent {
-        padding-top: 50px;
-        @include kwf-breakpoint(md) {
-            padding-top: 110px;
-        }
-    }
-
-    &.kwfUp-frontend .pageWrapper .menues {
-        @include kwf-breakpoint(lg) {
-            width: 80%;
-        }
-    }
+//    #outerContent {
+//        padding-top: 50px;
+//        @include kwf-breakpoint(md) {
+//            padding-top: 110px;
+//        }
+//    }
+//
+//    &.kwfUp-frontend #pageWrapper .menues {
+//        @include kwf-breakpoint(lg) {
+//            width: 80%;
+//        }
+//    }
 }
 
-
+/* Styling page-like design */
 html body.kwfUp-frontend {
     background-color: #dedede;
 }
 
-html .kwfUp-frontend .pageWrapper {
+html .kwfUp-frontend .kwfUp-pageWrapper {
     @include kwf-breakpoint(lg) {
         padding-bottom: 20px;
     }
 }
 
-.kwfUp-frontend #page {
+.kwfUp-frontend .kwfUp-page {
     width: 100%;
     margin: 0;
     padding: 0;
     background-color: white;
     @include border-radius-pie(0px);
 }
-.kwfUp-frontend .pageWrapper #page {
-    @include kwf-breakpoint(lg) {
-        width: 80%;
+.kwfUp-frontend .kwfUp-pageWrapper .kwfUp-page {
+    @include kwf-breakpoint(md) {
+        width: 95%;
         margin: auto;
-        background-color: #fff;
         overflow: hidden;
         box-shadow: 0px 3px 3px #888;
         padding-bottom: 20px;
     }
-}
-
-#page #outerHeader #header .leftRegion {
-    width: 123px;
-    float: left;
-}
-#page #outerHeader #header .leftRegion .logout {
-    background-color: #F17F08;
-    line-height: 30px;
-    text-align: center;
-    width: 123px;
-    display: block;
-    height: 30px;
-    text-transform: uppercase;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    float:left;
-    margin-top: 1px;
-}
-#page #outerHeader #header .leftRegion #logo {
-    float: left;
-    background-repeat: no-repeat;
-    background-color: #085AC0;
-    width: 123px;
-    height: 123px;
-    font-family: Helvetica, Arial;
-    text-align: center;
-    font-size: 33px;
-
-    .domain {
-        padding-top: 26px;
-        color: white;
-        font-weight: bolder;
-    }
-    .tld {
-        color: white;
-        font-weight: lighter;
-        line-height: 20px;
+    @include kwf-breakpoint(lg) {
+        width: 80%;
     }
 }
+/* end styling page-like design */
 
-body.ext2-ie6 { text-align: center; }
+// auskommentiert nach update auf 5.0
+//#page #outerHeader #header .leftRegion {
+//    width: 123px;
+//    float: left;
+//}
+//#page #outerHeader #header .leftRegion .logout {
+//    background-color: #F17F08;
+//    line-height: 30px;
+//    text-align: center;
+//    width: 123px;
+//    display: block;
+//    height: 30px;
+//    text-transform: uppercase;
+//    color: #fff;
+//    text-decoration: none;
+//    font-weight: bold;
+//    float:left;
+//    margin-top: 1px;
+//}
+//
+//body.ext2-ie6 { text-align: center; }
+//
+//#page #outerHeader #header,
+//#page #outerContent #content,
+//#page #outerFooter #footer { margin: 0px auto; text-align: left; }
 
-#page #outerHeader #header,
-#page #outerContent #content,
-#page #outerFooter #footer { margin: 0px auto; text-align: left; }
 
-
-#page #outerContent { background: $light; }
-#page #outerContent #content { padding: 0px 0px 0px 0px; }
-#page #outerContent #content #innerContent {
+.kwfUp-page .kwfUp-outerContent .kwfUp-content .kwfUp-innerContent {
     padding-left: 20px;
     padding-top: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
 }
 
-#page #outerFooter #footer { padding: 15px; position: relative; }
+// auskommentiert nach update auf 5.0
+//#page #outerFooter #footer { padding: 15px; position: relative; }
+//
+//.kwfUp-webListNone ul { margin: 0px; }
+//.kwfUp-webListNone,
+//.kwfUp-webListNone li { margin-bottom: 0px; }
 
-.kwfUp-webListNone ul { margin: 0px; }
-.kwfUp-webListNone,
-.kwfUp-webListNone li { margin-bottom: 0px; }
-
-
-// Form-Styling
-.kwfUp-webForm {
-    @include form-default-styles;
-    max-width: 300px;
-    display: block;
-    margin: auto;
+// auskommentiert nach update auf 5.0
+//// Form-Styling
+//.kwfUp-webForm {
+//    @include form-default-styles;
+//    max-width: 300px;
+//    display: block;
+//    margin: auto;
+//}
+.kwfUp-webForm .kwfUp-kwfField {
+    margin-bottom: 15px;
 }
-html .kwfUp-webForm input,
-html .kwfUp-webForm textarea,
-html .kwfUp-webForm label,
-html .kwfUp-webForm select {
-    font-family: Arial, Helvetica, Verdana, Geneva, sans-serif;
+.kwfUp-webForm input,
+.kwfUp-webForm textarea,
+.kwfUp-webForm select {
     font-size: 14px;
     line-height: 18px;
     width: 100%;
     box-sizing: border-box;
-    float: none;
 }
-// bei checkbox soll hackerl neben label stehen
-html .kwfUp-webForm .kwfFormFieldCheckbox > label {
-    width: auto;
-    float: left;
-}
-html .kwfUp-webForm input[type=checkbox] {
-    width: auto;
-}
-.kwfUp-webForm .submitWrapper {
-    margin: auto;
-    display: table;
-}
+//// bei checkbox soll hackerl neben label stehen
+//html .kwfUp-webForm .kwfFormFieldCheckbox > label {
+//    width: auto;
+//    float: left;
+//}
+//html .kwfUp-webForm input[type=checkbox] {
+//    width: auto;
+//}
+
 .kwfUp-webForm button {
     color: $light;
-    background: none !important;
-    border: none !important;
-    width: 100%;
-    height: 100%;
-}
-.kwfUp-webForm button:hover { color: $light; }
-.kwfUp-webForm .beforeButton,
-.kwfUp-webForm .afterButton {
-    display: block;
-    width: 0px;
-    height: 27px;
-}
-.kwfUp-webForm .button {
-    height: 30px;
+    display: table;
+    margin: auto;
+    margin-top: 20px;
     line-height: 30px;
+    padding: 5px 20px;
+    font-size: 20px;
     background-color: #085AC0;
-    background-image: none;
-}
+    /* disable user-agent styling */
+    border: none;
 
+    &:hover {
+        background-color: #0046AC;
+    }
+}
 
 // float-label Styling. Copy because include scss from npm does not work with kwf
 .has-float-label {
@@ -232,7 +204,7 @@ html .kwfUp-webForm input[type=checkbox] {
         border-bottom: 2px solid rgba(0,0,0,.1);
 
         @include float-label-scaled {
-            top: 20px;
+            top: 25%;
         }
 
         &:focus {
@@ -246,4 +218,21 @@ html .kwfUp-webForm input[type=checkbox] {
         background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23333' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .5em bottom .25em;
         background-size: 8px 10px;
     }
+}
+
+// Styling autocomplete in chrome
+// https://css-tricks.com/snippets/css/change-autocomplete-styles-webkit-browsers/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    //-webkit-text-fill-color: #085AC0;
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+    transition: background-color 5000s ease-in-out 0s;
 }
