Fix kwf-versions inkompatiblitäten

--- a/components/DataProtection/Form/Component.scss
+++ b/components/DataProtection/Form/Component.scss
@@ -1,6 +1,6 @@
 @import "compass/css3/box-sizing";
 
-.cssClass {
+.kwcClass {
     &.kwcForm.default.veryNarrow > div.kwcForm > form .kwfField.form_data_privacy .kwfFormFieldWrapper > input[name="form_data_privacy"],
     form .kwfField.form_data_privacy .kwfFormFieldWrapper input[name="form_data_privacy"] {
         width: 15px !important;
