Fix missing kwfUp in scss

--- a/components/Forms/Speaker/Field/SuperBoxSelect.scss
+++ b/components/Forms/Speaker/Field/SuperBoxSelect.scss
@@ -1,4 +1,4 @@
-div.kwcForm .formContainer form .formsSpeakerFieldSuperBoxSelect {
+div.kwfUp-kwcForm .kwfUp-formContainer form .kwfUp-formsSpeakerFieldSuperBoxSelect {
     .selectedValues {
         .selectedValue {
             margin-left: 2px;
