--- a/components/Root/Master/layout.config.scss
+++ b/components/Root/Master/layout.config.scss
@@ -3,24 +3,21 @@ $master-layouts: (
         sm: (
             layout: layout(auto 12 0.5 after),                   //containerbreite - spalten - gutter breite - gutter position
             content-spans: 12,
-            box-spans: (
-            )
+            box-spans: ()
         ),
         md: (
             layout: layout(auto 12 0.4 after),
             breakpoint: 768px,
             no-mediaqueries: true,
             content-spans: 12,
-            box-spans: (
-            )
+            box-spans: ()
         ),
         lg: (
             layout: layout(1200px 12 0.3 after),
             breakpoint: 1200px,
             no-mediaqueries: true,
             content-spans: 12,
-            box-spans: (
-            )
+            box-spans: ()
         )
     )
 );
