--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -51,6 +51,7 @@ html .kwfUp-frontend .kwfUp-pageWrapper {
     @include kwf-breakpoint(md) {
         width: 95%;
         margin: auto;
+        margin-bottom: 20px;
         overflow: hidden;
         box-shadow: 0px 3px 3px #888;
         padding-bottom: 20px;
