--- a/components/Talks/Talk/Component.scss
+++ b/components/Talks/Talk/Component.scss
@@ -5,9 +5,10 @@
     &__categoriesRegion {
         display: none;
     }
-    &:hover {
+    &--open {
         background-color: #eee;
         box-shadow: 0px 3px 3px #888;
+        margin-top: 5px;
         .kwcClass__categoriesRegion {
             display: block;
         }
