--- a/components/Talks/Talk/Component.twig
+++ b/components/Talks/Talk/Component.twig
@@ -2,14 +2,16 @@
     <div class="{{ 'title'|bemClass }}">
         <span>{{ talkRow.number }}</span> <span>{{ talkRow.getTitle(language) }}</span>
     </div>
-    <div class="{{ 'categoriesRegion'|bemClass }}">
-        <div class="{{ 'categoryLink'|bemClass }}">{{ data.trl('Kategorien') }}:</div>
-        <ul class="{{ 'category'|bemClass }}">
-            {% for talkToCategoryRow in talkRow.getChildRows('TalksToCategories') %}
-                <li>{{ talkToCategoryRow.getParentRow('Category').getCategoryTitle(language) }}</li>
-            {% endfor %}
-        </ul>
-    </div>
+    {% if talkRow.getChildRows('TalksToCategories')|length > 0 %}
+        <div class="{{ 'categoriesRegion'|bemClass }}">
+            <div class="{{ 'categoryLink'|bemClass }}">{{ data.trl('Kategorien') }}:</div>
+            <ul class="{{ 'category'|bemClass }}">
+                {% for talkToCategoryRow in talkRow.getChildRows('TalksToCategories') %}
+                    <li>{{ talkToCategoryRow.getParentRow('Category').getCategoryTitle(language) }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
     {#<div class="{{ 'changesRegion'|bemClass }}">#}
         {#<div class="{{ 'changesLink'|bemClass }}">{{ data.trl('Änderungen') }}</div>#}
         {#<ul class="{{ 'changes'|bemClass }}">#}
